--- a/final/index.html
+++ b/final/index.html
@@ -36,6 +36,7 @@
       </div>
     </div>
   </section>
+  <p class="caption"><a href="https://www.nbcnews.com/think/opinion/simone-biles-withdraws-olympics-team-final-after-vault-miss-proving-ncna1275205"> Ana Marie Cox</a> | NBC News</p>
 
 
   <!--nav bar bootstrap-->
@@ -119,13 +120,13 @@
         </div>
 
         <div class="col-md-6">
-          <img src="images/simone_testify.jpg">
+          <img src="images/simone_testify.jpg" alt="Simone Biles testifying at Larry Nassar's trial">
           <p class="caption"><a href="https://www.latimes.com/sports/story/2021-09-15/simone-biles-other-gymnasts-criticize-fbis-handling-of-larry-nassar-case-at-hearing"> Saul Loeb</a> | Associated Press</p>
         </div>
 
+
+<!--restart the div container-->
   <div class="container">
-
-
 
       <p>“I would say Simone’s legacy is actually far greater reaching than medal count, and her beginning to help facilitate the change of culture in our sport,” said Bob Neat, director of communications for the National Gymnastics Association.</p>
 
@@ -171,6 +172,8 @@
       <p>“I lived in a world where everything [was] strict, strict, strict,” Chiles told NBC Sports in May. “They’ve (World Champions) given me so much encouragement. I didn’t get that too much in the past.”</p>
 
       <p>Chiles then credited Biles with bringing about a culture change.</p>
+
+<!--pullquote goes here-->
 
       <p>“The fact that the gym is Black-owned makes it a beacon for Black elite gymnasts,” Moore said. “That’s not by happenstance. That’s a Simone thing. It’s going to become the blueprint.”</p>
 
